# admin

./: .gitignore  Dockerfile  alembic.ini  create_superuser.py  debug_script.py  docker-compose.yml  main.py  pyproject.toml  structure.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 01fbfc7829f0_category_table.py  06c57be65746_product_fix_models.py  0f01266ce01c_product_table.py  1f591f7a4ac7_banners_promo_models.py  24462822979b_categorie_image.py  24e2fa10e739_add_brend_and_catalog_table.py  2ad5b71a92ab_banner_show_button_expires_at.py  2e07d59e53c6_product_table.py  368f5108c154_user_table.py  36e79a9ecfe4_category_fix_models.py  3d3a13ca8faf_add_source_url_sync_fields_to_products.py  3d5e82b4c355_product_fix_models.py  43a9080c6764_product_table.py  44ddb90cd6c9_add_banners.py  48591978fe3c_initial_models.py  4ddf1214cf9c_video_add.py  52bf79b4691c_remove_manufacturer_from_categories.py  5c9d1eee5ec5_user_table.py  5f55cc9b5248_us_table.py  6592dfcb0f85_video_table.py  663ce9cdf957_new_models.py  6f9e946a9a5e_add_video_models.py  7010870f7b79_video_table.py  73f65904da08_product_add_discount.py  748184b27c4c_rank_table.py  74cc02eeeb79_analistic_table.py  (+30 more)
app/: deps.py  main.py
crud/: brand.py  category.py  color.py  import_log.py
models/: attributes.py  catalog.py  product.py  video.py
schemas/: catalog.py  category.py
scrapers/: __init__.py  base_scraper.py  labirint.py
services/: csv_import.py  product_ranking_service.py
tests/: smoke_posts.py
utils/: text_utils.py
worker/: celery_app.py
workflows/: deploy.yml
(+96 files in other folders)
